[gd_scene load_steps=4 format=3 uid="uid://t3hbipyonqw7"]

[ext_resource type="Script" path="res://score_overlay.gd" id="1_83ffe"]

[sub_resource type="LabelSettings" id="LabelSettings_30evh"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_rsdff"]
font_size = 24

[node name="ScoreOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_83ffe")

[node name="ScorePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 320.0
offset_bottom = 128.0

[node name="Label" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 64.0
text = "SCORE:"
label_settings = SubResource("LabelSettings_30evh")
vertical_alignment = 1
uppercase = true

[node name="scoreLabel" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 128.0
offset_right = 256.0
offset_bottom = 64.0
text = "0"
label_settings = SubResource("LabelSettings_rsdff")
horizontal_alignment = 2
vertical_alignment = 1
uppercase = true
